Implement startAt logic into electron
